<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Pardons</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="action_settings">Settings</string>
    <string name="send_pardon">Pardon Someone</string>
    <string name="send_pardon_dialog_title">Pardon Someone</string>
    <string name="pardonReasonDefault">Reason</string>
    <string name="pardonRecipientSpinnerPrompt">Select Recipient</string>
    <string name="accusationMadeText">Accusation Made!</string>
    <string name="missingPardonDataMessage">Enter recipient, quantity, and reason.</string>
    <string name="missingPardonFromAccusationDataMessage">Enter quantity.</string>
    <string name="pardonQuantityDefault">Quantity</string>
    <string name="sentPardonsText">Sent:</string>
    <string name="receivedPardonsText">Received:</string>
    <string name="sendPardonButtonText">Pardon</string>
    <string name="cancel">Cancel</string>
    <string name="receivedPardonsDefaultValText">0</string>
    <string name="sendPardonsDefaultValText">0</string>
    <string name="received_pardons_tab_title">Received</string>
    <string name="sent_pardons_tab_title">Sent</string>
    <string name="i_am_accused_by">I Am Accused By</string>
    <string name="pick_target_label">Browse</string>
    <string name="select_recipient_hint">Send Pardons accused&#8230;</string>
    <string name="firebase_url">https://pardons.firebaseio.com</string>
    <string name="accuseButtonText">Accuse</string>
    <string name="send_pardon_display_name_hint">Send Pardons&#8230;</string>
    <string name="make_accusation_display_name_hint">Make Accusation Against&#8230;</string>
    <string name="retract_accusation_dialog_title">Retract Accusation?</string>
    <string name="retract_accusation_dialog_positive_button_label">Retract</string>
    <string name="review_accusation_dialog_title">Review Accusation</string>
    <string name="review_accusation_dialog_send_button_label">Accept</string>
    <string name="review_accusation_dialog_deny_button_label">Deny</string>
    <string name="invalid_pardon_reference">Could not retrieve the selected pardon.</string>
    <string name="invalid_accusation_reference">Could not retrieve the selected accusation.</string>
    <string name="list_item_pardons_from_text">pardons accuser</string>
    <string name="accusationRetractedText">Retracted Accusation!</string>
    <string name="pardonsSentText">Sent Pardons!</string>
    <string name="deniedAccusationText">Denied Accusation!</string>
    <string name="retract_accusation_dialog_message">Retract accusation against %1$s?</string>
    <string name="review_accusation_against_me_dialog_message">You have been accused by %1$s.</string>
    <string name="singular_pardon_string">pardon</string>
    <string name="plural_pardon_string">pardons</string>
    <string name="received_pardons_attribution_format">%1$d %2$s from %3$s</string>
    <string name="sent_pardons_attribution_format">%1$d %2$s for %3$s</string>
    <string name="accusation_against_me_attribution_format">%1$s has accused you.</string>
    <string name="accusation_by_me_attribution_format">You accused %1$s.</string>
    <string name="respondedToAccusationText">Responded To Accusation!</string>
    <string name="i_accuse">I Accuse</string>
    <string name="login_with_google">Sign In With Google</string>
    <string name="action_logout">Sign Out</string>
    <string name="google_app_id">476650518726</string>
    <string name="signed_out">Not Signed In</string>
    <string name="pardon_from_accusation_target_display_label">Pardons For</string>
    <string name="pardon_from_accusation_target_display_value">Name Val</string>
    <string name="pardon_from_accusation_reason_label">Reason</string>
    <string name="pardon_from_accusation_reason_value">Reason Val</string>
    <string name="pardon_from_accusation_quantity_label">Quantity</string>
</resources>
