<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <LinearLayout android:layout_gravity="fill_horizontal"
        android:layout_row="0"
        android:layout_column="0">

        <TextView
            android:id="@+id/pardonFromAccusationTargetLabelTextView"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|fill_horizontal"
            android:text="@string/pardon_from_accusation_target_display_label"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/pardonFromAccusationTargetNameTextView"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|fill_horizontal"
            android:hint="@string/pardon_from_accusation_target_display_value"/>
    </LinearLayout>

    <LinearLayout android:layout_gravity="fill_horizontal"
        android:layout_row="1"
        android:layout_column="0">

        <TextView
            android:id="@+id/pardonFromAccusationReasonLabelTextView"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|fill_horizontal"
            android:text="@string/pardon_from_accusation_reason_label"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/pardonFromAccusationReasonValueTextView"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|fill_horizontal"
            android:hint="@string/pardon_from_accusation_reason_value"/>
    </LinearLayout>

    <LinearLayout android:layout_gravity="fill_horizontal"
        android:layout_row="2"
        android:layout_column="0">

        <TextView
            android:id="@+id/pardonFromAccusationQuantityLabelTextView"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|fill_horizontal"
            android:text="@string/pardon_from_accusation_quantity_label"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/pardonFromAccusationQuantityValueTextView"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|fill_horizontal"
            android:inputType="number"/>
    </LinearLayout>


</GridLayout>