<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.sortedunderbelly.pardons.MainActivity$PlaceholderFragment">

    <com.google.android.gms.common.SignInButton
        android:id="@+id/login_with_google"
        android:text="@string/login_with_google"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:columnCount="2"
        android:rowCount="5"
        android:padding="5dp"
        android:useDefaultMargins="true"
        android:id="@+id/gridLayout">

        <!-- Begin Received Pardons -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/receivedPardonsText"
            android:id="@+id/receivedPardonsTextView"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true"
            android:layout_column="0"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/receivedPardonsDefaultValText"
            android:id="@+id/receivedPardonsValTextView"
            android:layout_alignParentTop="true"
            android:layout_toEndOf="@+id/inboundRequestedPardonsTextView"
            android:layout_alignParentRight="false"
            android:layout_column="1"
            android:textStyle="bold" />
        <!-- End Received Pardons -->

        <!-- Begin Sent Pardons -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/sentPardonsText"
            android:id="@+id/sentPardonsTextView"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true"
            android:layout_column="0"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/sendPardonsDefaultValText"
            android:id="@+id/sentPardonsValTextView"
            android:layout_alignParentTop="true"
            android:layout_toEndOf="@+id/receivedPardonsTextView"
            android:layout_alignParentRight="false"
            android:layout_column="1"
            android:textStyle="bold" />
        <!-- End Sent Pardons -->

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/requestPardonButtonText"
            android:id="@+id/requestPardonButton"
            android:layout_alignParentStart="true"
            android:layout_row="4"
            android:layout_column="0" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sendPardonButtonText"
            android:id="@+id/sendPardonButton"
            android:layout_alignParentStart="true"
            android:layout_toEndOf="@+id/requestPardonButton"
            android:layout_row="4"
            android:layout_column="1" />

    </GridLayout>

    <View
        android:id="@+id/horz_line"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray" />

    <FrameLayout
        android:id="@+id/tabbed_fragment"
        android:layout_weight="2"
        android:layout_width="match_parent"
        android:layout_height="0px" />

</LinearLayout>
